dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-api-deployment
  labels:
    app: dev-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dev-api
  template:
    metadata:
      labels:
        app: dev-api
    spec:
      containers:
      - name: dev-api
        image: sumit246/node-api:dev  # Docker hub images name

---

apiVersion: v1
kind: Service
metadata:
  name: dev-api-services
spec:
  type: NodePort
  selector:
    app: dev-api  # Matches the labels in the Deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1400  # Docker-file Build Port Number
