node-api.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: node-api-deployment
#   labels:
#     app: node-api
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: node-api
#   template:
#     metadata:
#       labels:
#         app: node-api
#     spec:
#       containers:
#       - name: node-api
#         image: sumit246/node-api:latest  # Docker hub images name

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: node-api-services
# spec:
#   type: NodePort
#   selector:
#     app: node-api  # Matches the labels in the Deployment
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000  # Docker-file Build Port Number


apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-deployment
  labels:
    app: node-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: sumit246/node-api:dev  # Docker hub images name

---

apiVersion: v1
kind: Service
metadata:
  name: node-api-services
spec:
  type: NodePort
  selector:
    app: node-api  # Matches the labels in the Deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1400  # Docker-file Build Port Number
