stag-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sumit-stag-deployment
  labels:
    app: stag-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stag-api
  template:
    metadata:
      labels:
        app: stag-api
    spec:
      containers:
      - name: stag-api
        image: sumit246/stag-api:stag  # Docker hub images name

---

apiVersion: v1
kind: Service
metadata:
  name: sumit-stag-services
spec:
  type: NodePort
  selector:
    app: stag-api  # Matches the labels in the Deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1401  # Docker-file Build Port Number
